--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>mini-project-management</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap"
+      rel="stylesheet"
+    />
     <script
       type="text/javascript"
       src="https://webapi.amap.com/maps?v=1.4.15&key=<%= VUE_APP_MAP_APPKEY %><%= VUE_APP_MAP_PLUGINS %>"
